Added Database/Phinx Migrations updated composer to use phinx added phinx files

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "illuminate/database": "5.1.*",
         "altorouter/altorouter": "1.1.0",
         "respect/validation": "^1.1",
-        "duncan3dc/blade": "^3.0"
+        "duncan3dc/blade": "^3.0",
+        "robmorgan/phinx": "^0.6.4"
     },
     "autoload": {
       "psr-4": { "Nrs\\": "src/" }
