--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "altorouter/altorouter": "1.1.0",
         "respect/validation": "^1.1",
         "duncan3dc/blade": "^3.0",
-        "robmorgan/phinx": "^0.6.4"
+        "robmorgan/phinx": "^0.6.4",
+        "symfony/var-dumper": "^3.1"
     },
     "autoload": {
       "psr-4": { "Nrs\\": "src/" }
