--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "duncan3dc/blade": "^3.0",
         "robmorgan/phinx": "^0.6.4",
         "symfony/var-dumper": "^3.1",
-        "cocur/slugify": "^2.3"
+        "cocur/slugify": "^2.3",
+        "swiftmailer/swiftmailer": "^5.4"
     },
     "autoload": {
       "psr-4": { "Nrs\\": "src/" }
